
SVN
-------------------------------

XML:   Resolved issue CASTOR-1623 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up checkstyle complaints in builder
       Details: http://jira.codehaus.org/browse/CASTOR-1623
       (Edward - 20061014)

XML:   Resolved issue CASTOR-1555 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Correct SRCGEN JavaDoc tags that fail validation
       Details: http://jira.codehaus.org/browse/CASTOR-1555
       (Edward - 20061012)

XML:   Resolved issue CASTOR-204 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Invalid Instance Document containing ALL elements of a schema definitions choice is not unmarshallable
       Details: http://jira.codehaus.org/browse/CASTOR-204
       (Edward - 20061012)

All:   Resolved issue CASTOR-1619 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: Exceptions do not support claus.
       Details: http://jira.codehaus.org/browse/CASTOR-1619
       (Ralf - 20061012)

XML:   Resolved issue CASTOR-1618 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: JAXP usage at Unmarshaller.
       Details: http://jira.codehaus.org/browse/CASTOR-1618
       (Ralf - 20061012)

All:   Resolved issue CASTOR-1620 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: unknown methods.
       Details: http://jira.codehaus.org/browse/CASTOR-1620
       (Ralf - 20061012)

XML:   Resolved issue CASTOR-587 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with default values for date/time types in code generation
       Details: http://jira.codehaus.org/browse/CASTOR-587
       (Edward - 20061011)

XML:   Resolved issue CASTOR-1597 using contribution from Edward Kuns [edward.kuns@aspect.com]